tooling/nargo_cli/tests/snapshots/execution_success/array_with_refs_from_param/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() -> pub bool {
    false >= *func_3(&mut false)[if *func_3(&mut true)[0] { 0 } else { 0 }]
}

fn func_3(b: &mut bool) -> [&mut bool] {
    { [b] }.as_slice()
}
