tooling/nargo_cli/tests/snapshots/execution_success/array_with_refs_from_param/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[array_with_refs_from_param] Circuit output: 1
